<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/site_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageview_site"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:background="#673AB7"
            android:contentDescription="@string/imageview_description"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/textview_site_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/site_name"
                android:textAppearance="?attr/textAppearanceTitleMedium"/>

            <TextView
                android:id="@+id/textview_site_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/site_location"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"/>

            <TextView
                android:id="@+id/textview_site_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/site_description"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?android:attr/textColorSecondary"/>

            <Button
                android:id="@+id/button_action_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:text="@string/button_action"
                />

        </LinearLayout>

    </LinearLayout>
    
</com.google.android.material.card.MaterialCardView>